--- a/admin.html
+++ b/admin.html
@@ -21,7 +21,7 @@ if (!isset($_SESSION['loggedin'])) {
       <nav class="nav">
         <a href="/" class="nav-link name-site">Offbeat.</a>
 
-        <a href="login.html">Login</a>
+        <a href="login.html" class="hi-link">Login</a>
 
         <ul class="nav-links">
           <li><a href="#">Inicio</a></li>
